--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ body {
     font-family: 'Exo 2', sans-serif;
 }
 
+br.mo {
+    display: none;
+}
+
 /* header style */
 header {
     background: rgba(0, 0, 0, 0.2);
@@ -123,6 +127,11 @@ header .inner-header .tnb li:last-child i {
 
 header .inner-header nav li {
     float: left;
+}
+
+/* 모바일 전용 햄버거 버튼은 default가 display: none으로 */
+header .inner-header .gnb-mobile {
+    display: none;
 }
 
 /* end header style */
@@ -435,6 +444,7 @@ section.me ul.list ul.in p::after {
     padding: 10px 0;
     cursor: pointer;
 }
+
 /* end section.me style */
 
 /* section.sns style */
@@ -500,7 +510,7 @@ section.sns ul li .img-box::after {
 
 section.sns ul li a:hover .img-box::after {
     opacity: 1;
-} 
+}
 
 
 section.sns ul li a .bottom {
@@ -533,21 +543,62 @@ section.sns .sub-container li a .bottom p.time i {
 
 /* footer style */
 footer {
-    border-top: 1px solid #000;
-    padding: 30px;
+    border-top: 1px solid #999;
+    padding: 30px 0;
 
     position: relative;
 }
 
-footer .inner h2 {
+footer .inner {
+    width: 84%;
+    margin: 0 auto;
+}
+
+footer .inner .ft-logo {
     float: left;
-    margin: 0 120px;
+    width: 14%;
+    /* margin-right:120px; */
+}
+
+footer .inner .ft-logo img {
+    width: 100%;
 }
 
 footer .inner .address {
     float: left;
+    margin-left: 100px;
+    margin-top: 20px;
 }
 
+footer .inner .address li:first-child {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+footer .inner .address li:last-child {
+    color: #999;
+}
+
+footer .inner .list {
+    float: right;
+    margin-top: 20px;
+}
+
+footer .inner .list li {
+    float: left;
+    margin-left: 80px;
+}
+
+footer .inner .list li:last-child {
+    font-weight: bold;
+}
+
+footer .inner .list li a:hover {
+    color: #ff8342;
+    text-decoration: underline;
+}
+
+/* 
 footer .inner .address li:first-child {
     padding: 15px 0px 10px;
     font-weight: bold;
@@ -561,10 +612,241 @@ footer .inner .list li {
     float: left;
     margin-top: 15px;
     margin-left: 80px;
+    font-size: 0.9em;
 }
 
 footer .inner .list li:first-child {
-    margin-left: 350px;
+    margin-left: 300px;
 }
 
+footer .inner .list li:last-child {
+    font-weight: bold;
+} */
+/* end footer style */
 
+
+/* ========== 반응형 웹 디자인 ========== */
+/* 노트북 해상도 1600px 미만 */
+@media (max-width: 1599px) {
+    header .inner-header nav {
+        display: none;
+    }
+
+    header .inner-header .gnb-mobile {
+        display: block;
+        float: right;
+        font-size: 40px;
+        color: #fff;
+    }
+
+    section.main .main-title h2 {
+        font-size: 35px;
+    }
+
+    section.main .main-title p {
+        font-size: 18px;
+    }
+
+    section.main .main-title .view {
+        font-size: 12px;
+        width: 120px;
+    }
+
+    section.sns ul li .img-box {
+        max-height: 170px;
+    }
+
+    footer .inner .ft-logo {
+        width: 30%;
+    }
+}
+
+/* 태블릿 1024px 이하 해상도 (아이패드 프로) */
+@media (max-width: 1024px) {
+
+    header .inner-header,
+    section .sub-container,
+    footer .inner {
+        width: 95%;
+    }
+
+    section.main .main-title h2 {
+        font-size: 55px;
+    }
+
+    section.main .main-title p {
+        font-size: 22px;
+    }
+
+    section.main .main-title .view {
+        font-size: 16px;
+        width: 180px;
+    }
+
+    section.me ul.list ul.in li p::before {
+        left: -20px;
+    }
+
+    footer .inner .list {
+        float: left;
+    }
+}
+
+/* 태블릿 768px 이하 해상도 (아이패드 미니) */
+@media (max-width: 768px) {
+    section.main .main-title h2 {
+        font-size: 40px;
+    }
+
+    section.main .main-title p {
+        font-size: 18px;
+    }
+
+    section.about .sub-container li {
+        float: none;
+        width: 100%;
+        margin-bottom: 150px;
+    }
+
+    section.about .sub-container li .img-box {
+        height: 500px;
+    }
+
+    section.innovation .img-box .inner .bottom {
+        padding: 30px;
+    }
+
+    section.innovation .img-box .inner .bottom p {
+        float: none;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    section.innovation .img-box .inner .bottom a {
+        float: none;
+        display: block;
+        width: 100px;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    section.me {
+        padding: 50px 0;
+    }
+
+    section.me ul.list ul.in li em {
+        float: none;
+        width: 100%;
+        font-size: 17px;
+        margin-bottom: 5px;
+    }
+
+    section.me ul.list ul.in li p {
+        float: none;
+        margin-top: 10px;
+    }
+
+    section.sns ul li {
+        float: none;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    section.sns ul li a .img-box {
+        max-height: none;
+    }
+
+    footer .inner .ft-logo {
+        float: none;
+        width: 30%;
+        margin: 0 auto;
+    }
+
+    footer .inner .address {
+        float: none;
+        width: 100%;
+        text-align: center;
+        margin: 20px auto;
+    }
+
+    footer .inner .list li {
+        margin-left: 60px;
+    }
+}
+
+/* 모바일 414px 이하 해상도 (아이폰6/7/8 plus) */
+@media screen and (max-width: 414px) {
+    header {
+        height: 80px;
+        line-height: 80px;
+    }
+
+    header .inner-header .logo {
+        width: 150px;
+    }
+
+    section.main .main-title h2 {
+        font-size: 30px;
+    }
+
+    section.main .main-title p {
+        font-size: 16px;
+    }
+
+    section.main .main-title .view {
+        width: 150px;
+        font-size: 14px;
+    }
+
+    section .title h2 {
+        font-size: 25px;
+    }
+
+    section .title p {
+        font-size: 14px;
+    }
+
+    section.about {
+        padding: 30px 0;
+    }
+
+    section.about .sub-container li .img-box {
+        height: 300px;
+    }
+
+    section.about .sub-container li {
+        border: 1px solid #ddd;
+        box-sizing: border-box;
+        background: #fafafa;
+        margin-bottom: 30px;
+        height: fit-content;
+    }
+
+    section.innovation .img-box {
+        height: 400px;
+    }
+
+    section.innovation .img-box .inner {
+        top: 50%;
+    }
+
+    section.me ul.list>li {
+        padding: 20px 20px 20px 45px;
+    }
+
+    section.me ul.list>li p {
+        text-align: justify;
+    }
+
+    footer .inner .ft-logo {
+        width: 50%;
+    }
+
+    footer .inner .list {
+        display: none;
+    }
+
+    br.mo {
+        display: block;
+    }
+}
